tests/snapshots/lib__snapshots__report@levels.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 20
expression: "off,error,warn,info,debug,trace\n"
---
(no warnings)
