tests/snapshots/lib__snapshots__report@parse_spec_empty_level.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 74
expression: "crate1::mod1=wrong,crate2="
---

  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::simple::Warning::InvalidLevel

  ⚠ invalid level filter specified
   ╭────
 1 │ crate1::mod1=wrong,crate2=
   ·              ──┬──
   ·                ╰── this level filter is invalid
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

