tests/snapshots/lib__snapshots__report@parse_spec_empty_with_filter.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 76
expression: crate1/a*c
---
(no warnings)
