tests/snapshots/lib__snapshots__report@parse_spec_global.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 76
expression: "warn,crate2=debug"
---
(no warnings)
