tests/snapshots/lib__snapshots__report@parse_spec_invalid_crate_filter.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 74
expression: "crate1::mod1=error=warn,crate2=debug/a.c"
---

  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::simple::Warning::InvalidLevel

  ⚠ invalid level filter specified
   ╭────
 1 │ crate1::mod1=error=warn,crate2=debug/a.c
   ·              ─────┬────
   ·                   ╰── this level filter is invalid
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

